Bug 1679745 - Avoid name collision with compiler macro sun on Solaris r=chunmin

Differential Revision: https://phabricator.services.mozilla.com/D99466